--- a/.github/workflows/auto-close-prs.yml
+++ b/.github/workflows/auto-close-prs.yml
@@ -1,45 +1,24 @@
-name: Auto-Close Unauthorized PRs
+name: Auto Close Fork PRs
 
 on:
   pull_request:
     types: [opened, reopened]
 
 jobs:
-  check-author:
+  close-fork-pr:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.head.repo.full_name != github.repository
+
     steps:
-      - name: Check PR author
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const allowedUsers = [
-              'amaan-sayyed',
-              'platform-dev1',
-              'platform-dev2',
-              'platform-dev3',
-              'platform-dev4',
-              'platform-dev5'
-            ];
+      - name: Close PR from fork
+        run: |
+          gh pr close "$PR_URL" --comment "$COMMENT"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          COMMENT: |
+            ❌ This pull request was opened from a forked repository.
 
-            const prAuthor = context.payload.pull_request.user.login;
+            Please open a pull request with the **base repo** as `your-username/flask-react-template` and base branch as `your-username/flask-react-template/main`.
 
-            if (!allowedUsers.includes(prAuthor)) {
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: `Hi @${prAuthor}, thanks for your PR! However, this repository only accepts contributions from our internal platform team. Your PR will be closed.`
-              });
-
-              await github.rest.pulls.update({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: context.payload.pull_request.number,
-                state: 'closed'
-              });
-
-              console.log(`PR from @${prAuthor} closed.`);
-            } else {
-              console.log(`@${prAuthor} is authorized.`);
-            }
+            Thank you!
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
