--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -11,7 +11,7 @@ jobs:
       cancel-in-progress: true
     with:
       # ENV-BASED
-      hosting_provider: ${{ vars.HOSTING_PROVIDER }}  # 'DIGITAL_OCEAN' 
+      hosting_provider: ${{ vars.HOSTING_PROVIDER }}  # 'DO'
       app_name: frm-boilerplate
       app_env: preview
       branch: ${{ github.event.ref }}
