--- a/.github/workflows/auto-close-prs.yml
+++ b/.github/workflows/auto-close-prs.yml
@@ -1,32 +1,54 @@
-name: Auto Close PRs Not From Branch
+name: Auto Close PRs from Unauthorized Forks
 
 on:
   pull_request:
     types: [opened, reopened]
 
 jobs:
-  close-invalid-pr:
+  close-unauthorized-fork:
     runs-on: ubuntu-latest
-    if: |
-      github.event.pull_request.head.repo.full_name == github.repository &&
-      github.event.pull_request.base.ref != 'main'
-
     permissions:
-      pull-requests: write  # Required to comment and close PRs
+      pull-requests: write
 
     steps:
-      - name: Install GitHub CLI
-        run: sudo apt-get install gh -y
+      - name: Check if PR is from fork and author is unauthorized
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const pr = context.payload.pull_request;
+            const prAuthor = pr.user.login;
+            const forked = pr.head.repo.full_name !== `${context.repo.owner}/${context.repo.repo}`;
 
-      - name: Close PR into non-main branches
-        run: |
-          gh pr close "$PR_URL" --comment "$COMMENT"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          COMMENT: |
-            ❌ This pull request does not target the correct base branch.
+            const allowedUsers = [
+              'jjalan',
+              'sn1f3rt',
+              'KrishnaVAMSI-2003',
+              'PunithKosana',
+              'bettrhq',
+              'amaan-sayyed'
+            ];
 
-            Please ensure that PRs are opened against the `main` branch of this repo.
+            if (forked && !allowedUsers.includes(prAuthor)) {
+              const message = `❌ Hi @${prAuthor}, your pull request was opened from a fork and you are not authorized to contribute to this repository.
 
-            Thank you!
+            Only internal team members are allowed to raise PRs to this repo. Please fork the repo and keep your changes in your own fork.
+
+            This PR has been **automatically closed**.`;
+
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: pr.number,
+                body: message
+              });
+
+              await github.rest.pulls.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: pr.number,
+                state: 'closed'
+              });
+            } else {
+              console.log("PR is either not from a fork or author is authorized.");
+            }
