--- a/.github/workflows/clean_on_dispatch.yml
+++ b/.github/workflows/clean_on_dispatch.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   clean:
-    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@amaan/chore/ci-preview-deploy-diagnostics
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.4
     concurrency:
       group: ci-preview-${{ github.event.ref }}
       cancel-in-progress: true
