--- a/.github/workflows/production_on_push.yml
+++ b/.github/workflows/production_on_push.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   production:
-    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@amaan/chore/ci-preview-deploy-diagnostics
+    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.4
     concurrency:
       group: ci-production-${{ github.event.ref }}
       cancel-in-progress: true
