--- a/Pipfile
+++ b/Pipfile
@@ -24,8 +24,6 @@ datadog-api-client = "==2.31.0"
 temporalio = "==1.10.0"
 
 [dev-packages]
-black = "==24.8.0"
-isort = "==5.13.2"
 mypy = "==1.6.1"
 pytest = "==7.4.3"
 pytest-cov = "==4.1.0"
@@ -33,8 +31,10 @@ types-flask-cors = "==4.0.0.1"
 types-pyyaml = "==6.0.12.12"
 types-requests = "==2.31.0.10"
 vulture = "==2.10"
-autoflake = "==2.3.1"
 pylint = "*"
+autoflake = "*"
+isort = "*"
+black = "*"
 
 [requires]
 python_version = "3.12"
