--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -6,34 +6,21 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  preview:
-    # only run when updating an 'Open' PR
-    if: github.event.pull_request.state == 'open'
-    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.4
-    concurrency:
-      group: ci-preview-${{ github.event.pull_request.head.ref }}
-      cancel-in-progress: true
-    with:
-      hosting_provider: ${{ vars.HOSTING_PROVIDER }} # 'DIGITAL_OCEAN' or 'AWS'
-      analyze_base: main
-      app_name: frm-boilerplate
-      app_env: preview
-      app_hostname: '{1}.preview.platform.bettrhq.com'
-      branch: ${{ github.event.pull_request.head.ref }}
-      build_args: |
-        APP_ENV=preview
-      checks: "['npm:coverage', 'npm:lint', 'compose:test']"
-      docker_registry: ${{ vars.DOCKER_REGISTRY }}
-      docker_username: ${{ vars.DOCKER_USERNAME }}
-      aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
-      aws_region: ${{ vars.AWS_REGION }}
-      pull_request_number: ${{ github.event.number }}
-      sonar_host_url: ${{ vars.SONAR_HOST_URL }}
-      do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
-    secrets:
-      docker_password: ${{ secrets.DOCKER_PASSWORD }}
-      doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
-      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
-      sonar_token: ${{ secrets.SONAR_TOKEN }}
+  # Simple test job to verify PR and draft conditions
+  test-pr-conditions:
+    if: github.event.pull_request.state == 'open' && !github.event.pull_request.draft
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check PR Status
+        run: |
+          echo "✅ PR Condition Check Passed!"
+          echo "PR Number: ${{ github.event.pull_request.number }}"
+          echo "PR State: ${{ github.event.pull_request.state }}"
+          echo "PR Draft: ${{ github.event.pull_request.draft }}"
+          echo "PR Title: ${{ github.event.pull_request.title }}"
+          echo "Branch: ${{ github.event.pull_request.head.ref }}"
+          
+      - name: Simulate Success
+        run: |
+          echo "🎉 This job only runs for non-draft, open PRs"
+          echo "If you see this message, the conditions are working correctly!"
