--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -9,7 +9,7 @@ jobs:
   preview:
     # Run only if PR is open and not draft
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
-    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.4
+    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@test-case-ci
     concurrency:
       group: ci-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
