--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "lint:fix": "eslint --fix .",
     "lint:py": "make run-lint",
     "script": "make run-script file=$npm_config_file",
+    "serve:win": "concurrently \"npm run serve:assets\" \"npm run serve:backend\" \"npm run serve:frontend\"",
     "serve": "bash -c 'make serve ARGS=\"$*\"' --",
     "serve:assets": "cpx \"src/assets/**/*.*\" dist/assets --watch",
-    "serve:backend": "make run-engine",
+    "serve:backend": "make run-engine-winx86",
     "serve:temporal-server": "make run-temporal-server",
     "serve:temporal": "make run-temporal",
     "serve:frontend": "webpack serve --output-path dist/public --config src/apps/frontend/webpack.dev.js --hot --progress",
