--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
     types: [opened, synchronize, reopened,ready_for_review]
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   preview:
     # Run only if PR is open and not draft
