--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -47,15 +47,15 @@ jobs:
       sonar_token: ${{ secrets.SONAR_TOKEN }}
 
 
-  upload-sarif:
-    runs-on: ubuntu-latest
-    needs: preview
-    steps:
-      - name: Download SARIF artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: trivy-results
-          path: .
+  # upload-sarif:
+  #   runs-on: ubuntu-latest
+  #   needs: preview
+  #   steps:
+  #     - name: Download SARIF artifact
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: trivy-results
+  #         path: .
 
-      - name: Verify downloaded SARIF
-        run: ls -l trivy-results.sarif
+  #     - name: Verify downloaded SARIF
+  #       run: ls -l trivy-results.sarif
