--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -44,7 +44,7 @@ jobs:
   upload_sarif:
     needs: preview
     runs-on: ubuntu-latest
-    if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
+    if: always()
     steps:
       - name: Download SARIF artifact
         uses: actions/download-artifact@v4
