--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -41,3 +41,22 @@ jobs:
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
       sonar_token: ${{ secrets.SONAR_TOKEN }}
       target_token: ${{ secrets.TOKEN }}
+
+  upload-sarif:
+    needs: preview
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download trivy results
+        uses: actions/download-artifact@v3
+        with:
+          name: trivy-sarif  
+          path: .
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: trivy-result.sarif
