--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -53,10 +53,10 @@ jobs:
       - name: Download trivy results
         uses: actions/download-artifact@v3
         with:
-          name: trivy-sarif  
+          name: trivy-results  
           path: .
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif_file: trivy-result.sarif
+          sarif_file: trivy-results.sarif
