--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -43,17 +43,17 @@ jobs:
       target_token: ${{ secrets.TOKEN }}
 
 
-  upload-sarif:
-    needs: preview
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download trivy results
-        uses: actions/download-artifact@v4
-        with:
-          name: trivy-results  
-          path: .
+  # upload-sarif:
+  #   needs: preview
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Download trivy results
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: trivy-results  
+  #         path: .
 
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v4
-        with:
-          sarif_file: trivy-results.sarif
+  #     - name: Upload SARIF file
+  #       uses: github/codeql-action/upload-sarif@v4
+  #       with:
+  #         sarif_file: trivy-results.sarif
