--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -17,10 +17,9 @@ jobs:
           path: .  
 
       - name: Upload SARIF file
-        uses: actions/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         with:
-          name: trivy-results-sarif
-          path: trivy-results.sarif
+          sarif_file: trivy-results.sarif
 
   preview:
     # Run only if PR is open and not draft
