--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -15,12 +15,14 @@ jobs:
         with:
           name: trivy-results
           path: .  
-
+      
+      - name: List files to confirm path
+        run: ls -R trivy-results
+        
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: trivy-results.sarif
-          token: ${{ secrets.TOKEN }}
           sha: ${{ github.event.pull_request.head.sha }}
           ref: ${{ github.event.pull_request.head.ref }}
 
