--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: trivy-results
-          path: .  
+          path: ./
       
       - name: List files to confirm path
         run: ls -la
