--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: List files to confirm path
         run: pwd
-        
+
       - name: List files to confirm path
         run: ls -la
 
@@ -28,7 +28,7 @@ jobs:
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif_file: ./trivy-results.sarif
+          sarif_file: /home/runner/work/flask-react-template/flask-react-template/trivy-results.sarif
           sha: ${{ github.event.pull_request.head.sha }}
           ref: ${{ github.event.pull_request.head.ref }}
 
