--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -22,6 +22,9 @@ jobs:
       - name: List files to confirm path
         run: ls -la
 
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
         with:
