--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -22,8 +22,8 @@ jobs:
       - name: gzip files to confirm path
         run: gzip -c trivy-results.sarif > results.sarif.gz
 
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: List files to confirm path
+        run: ls -la
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
