--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -25,12 +25,26 @@ jobs:
       - name: List files to confirm path
         run: ls -la
 
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v4
-        with:
-          sarif_file: /home/runner/work/flask-react-template/flask-react-template/trivy-results.sarif
-          # sha: ${{ github.event.pull_request.head.sha }}
-          # ref: ${{ github. }}
+      - name: Upload SARIF via REST API
+        run: |
+          # Encode SARIF file to base64 (no line wrapping)
+          SARIF_BASE64=$(base64 -w0 trivy-results.sarif)
+
+          # Prepare JSON payload
+          PAYLOAD=$(jq -n \
+            --arg commit_sha "$GITHUB_SHA" \
+            --arg ref "$GITHUB_REF" \
+            --arg sarif "$SARIF_BASE64" \
+            '{ commit_sha: $commit_sha, ref: $ref, sarif: $sarif }')
+
+          # Upload to GitHub Code Scanning API
+          curl -s -o response.json -w "%{http_code}" \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: application/json" \
+            --data "$PAYLOAD" \
+            "https://api.github.com/repos/${{ github.repository }}/code-scanning/sarifs"
+
 
   preview:
     # Run only if PR is open and not draft
